<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/session_creation_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/session_creation_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="5dp"
        android:text="@string/session_creation_title" />

    <ListView
        android:id="@+id/session_creation_options"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="50" >
    </ListView>

    <LinearLayout
        android:id="@+id/session_creation_button_row"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="20dp"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/session_creation_add_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/session_creation_add_button" />

        <Button
            android:id="@+id/session_creation_cancel_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/session_creation_cancel_button" />
    </LinearLayout>

</LinearLayout>