<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/session_course_creation_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/session_course_dialog_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:text="@string/session_course_dialog_title" />

    <EditText
        android:id="@+id/session_course_dialog_name"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/session_course_dialog_button_row"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="3dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="10dp" >

        <Button
            android:id="@+id/session_course_dialog_create_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/session_course_dialog_create_button"
            android:onClick="onClick" />

        <Button
            android:id="@+id/session_course_dialog_cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/session_course_dialog_cancel_button"
            android:onClick="onClick" />
    </LinearLayout>

</LinearLayout>